--- a/M1P02_Javier_Molina_Garcia.html
+++ b/M1P02_Javier_Molina_Garcia.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Práctica 2</title>
+    <meta name="desciption" content="Página correspondiente a la práctica 2">
+    <meta name="keywords" content="Práctica, HTML5">
 </head>
 <body>
-    
+    <header><h1>Práctica 2</h1></header>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor fugiat dolorum obcaecati architecto excepturi unde incidunt possimus, est laborum ratione optio porro sed enim asperiores et voluptatem, itaque placeat voluptatum.</p>
+    <p>Beatae aliquid, nesciunt odit iusto quae quia perferendis, explicabo tenetur impedit voluptate asperiores quibusdam, eum facilis exercitationem? Ipsum minus et quod esse sunt nam modi necessitatibus temporibus cumque? Temporibus, tempora.</p>
+    <p>Cupiditate, doloremque vel itaque temporibus commodi quisquam at deleniti magni harum sed delectus alias autem. Sunt unde quae tempora. Neque sapiente expedita facilis molestiae illo unde molestias provident natus perspiciatis!</p>
+    <footer>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum, est saepe repellendus molestiae autem praesentium eveniet et atque in adipisci sapiente possimus doloribus rem quis quisquam optio impedit repellat.</p>
+        <p>Amet laudantium consequatur ex eum voluptates eius! Nihil quo ipsa molestias nulla culpa totam quae pariatur odit aut libero harum, id velit sint maiores officiis, odio dolorum impedit debitis sequi!</p>
+    </footer>
 </body>
 </html>
