Correción entrega prácticas

--- a/M1P04_Javier_Molina_Garcia.html
+++ b/M1P04_Javier_Molina_Garcia.html
@@ -23,7 +23,7 @@
     <section>
         <h2>Main section</h2>
         <article>
-            <h3>Article 1</h3>
+            <h3><i>Article 1</i></h3>
             <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Ullam nostrum corrupti aperiam,
                 quia facilis
                 voluptate eum eius doloribus ea molestiae, corporis consequuntur exercitationem ut fuga vero unde quas
