--- a/M2P04/html/inicio.html
+++ b/M2P04/html/inicio.html
@@ -4,27 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nav Test</title>
+  <title>Inicio</title>
   <link rel="stylesheet" href="../css/style.css">
   <script src="https://kit.fontawesome.com/b9766c0038.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
   <header class="main-header">
-    <picture>
-      <source srcset="../media/img/logo-horizontal.png" media="(min-width: 800px)" class="logo">
-      <img src="../media/img/logo-no-text.png" alt="Logo de la compañía" class="logo" />
-    </picture>
+    <a href="../html/inicio.html">
+      <picture>
+        <source srcset="../media/img/logo-horizontal.png" media="(min-width: 800px)" class="logo">
+        <img src="../media/img/logo-no-text.png" alt="Logo de la compañía" class="logo" />
+      </picture>
+    </a>
     <nav class="standard-nav">
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Sobre nosotros</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="../html/inicio.html">Inicio</a></li>
+        <li><a href="../html/about.html">Sobre nosotros</a></li>
+        <li><a href="../html/servicios.html">Servicios</a></li>
+        <li><a href="../html/contacto.html">Contacto</a></li>
       </ul>
     </nav>
     <a onclick=showSidebar() href="#" class="menu-button"><svg xmlns="http://www.w3.org/2000/svg" height="48px"
@@ -38,10 +39,10 @@
         </svg>
       </a>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Sobre nosotros</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="../html/inicio.html">Inicio</a></li>
+        <li><a href="../html/about.html">Sobre nosotros</a></li>
+        <li><a href="../html/servicios.html">Servicios</a></li>
+        <li><a href="../html/contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -69,14 +70,34 @@
       qui
       laborum officia!
     </div>
-    <footer>
-      <div class="redes-sociales">
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+    <div class="practica4-3">
+      <h1 class="p4-3-title">Práctica 4, Ejercicio 3</h1>
+      <div>
+        <h2>Columna 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quia harum vitae eveniet ut nemo, ullam,
+          consequatur obcaecati adipisci incidunt necessitatibus a minus earum est magni explicabo nisi officia facere!
+        </p>
       </div>
-    </footer>
+      <div>
+        <h2>Columna 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio tempore tempora rerum reprehenderit id quae,
+          quia harum. Repellat ipsa omnis maxime rerum. Nulla autem nesciunt ipsum quisquam sit consequatur animi.</p>
+      </div>
+      <div>
+        <h2>Columna 3</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum soluta ratione ut consequatur quasi voluptas at
+          dicta aliquam, tenetur ab ipsum, numquam repellat autem sequi temporibus! Animi iste et earum.</p>
+      </div>
+    </div>
+
   </div>
+  <footer>
+    <div class="redes-sociales">
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="#"><i class="fa-brands fa-youtube"></i></a>
+    </div>
+  </footer>
   <script src="../js/script.js"></script>
 
 </body>
