--- a/M2P05/html/servicios.html
+++ b/M2P05/html/servicios.html
@@ -49,6 +49,62 @@
         </nav>
     </header>
     <div class="main-container">
+        <div class="practica5-2">
+            <h1 class="p5-2-title">Práctica 5, Ejercicio 2</h1>
+            <div>
+                <h2>Columna 1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quia harum vitae eveniet ut nemo,
+                    ullam,
+                    consequatur obcaecati adipisci incidunt necessitatibus a minus earum est magni explicabo nisi
+                    officia facere!
+                </p>
+            </div>
+            <div>
+                <h2>Columna 2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio tempore tempora rerum reprehenderit id
+                    quae,
+                    quia harum. Repellat ipsa omnis maxime rerum. Nulla autem nesciunt ipsum quisquam sit consequatur
+                    animi.</p>
+            </div>
+            <div>
+                <h2>Columna 3</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum soluta ratione ut consequatur quasi
+                    voluptas at
+                    dicta aliquam, tenetur ab ipsum, numquam repellat autem sequi temporibus! Animi iste et earum.</p>
+            </div>
+        </div>
+        <div class="practica5-3">
+            <h1>Práctica 5, Ejercicio 3</h1>
+            <p>Texto en fuente arial.<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga deleniti sint
+                sit.
+                Culpa sit pariatur perferendis facere saepe non quae placeat similique! Id officia veniam eaque
+                necessitatibus totam voluptatibus sit.</p>
+        </div>
+        <div class="practica5-4">
+            <h1>Práctica 5, Ejercicio 4</h1>
+            <img src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg?wp=1&w=357&h=357"
+                alt="cat">
+        </div>
+        <div class="practica5-6">
+            <div>
+                <h1>Práctica 5, Ejercicio 6</h1>
+            </div>
+            <table>
+                <caption>Título de la tabla</caption>
+                <tr>
+                    <td>Elemento 1</td>
+                    <td>Elemento 2</td>
+                </tr>
+                <tr>
+                    <td>Elemento 3</td>
+                    <td>Elemento 4</td>
+                </tr>
+            </table>
+        </div>
+        <div class="practica5-7">
+            <h1>Cabecera h1 20px #333FFF</h1>
+            <h2>Cabecera h2 15px #B8B9C4</h2>
+        </div>
     </div>
     <footer>
         <div class="redes-sociales">
