--- a/M2P05/html/inicio.html
+++ b/M2P05/html/inicio.html
@@ -25,7 +25,7 @@
         <li><a href="../html/inicio.html">Inicio</a></li>
         <li><a href="../html/about.html">Sobre nosotros</a></li>
         <li><a href="../html/servicios.html">Servicios</a></li>
-        <li><a href="../html/contacto.html">Contacto</a></li>
+        <li><a href="../html/contacto.html" target="_blank">Contacto</a></li>
       </ul>
     </nav>
     <a onclick=showSidebar() href="#" class="menu-button"><svg xmlns="http://www.w3.org/2000/svg" height="48px"
@@ -42,7 +42,7 @@
         <li><a href="../html/inicio.html">Inicio</a></li>
         <li><a href="../html/about.html">Sobre nosotros</a></li>
         <li><a href="../html/servicios.html">Servicios</a></li>
-        <li><a href="../html/contacto.html">Contacto</a></li>
+        <li><a href="../html/contacto.html" target="_blank">Contacto</a></li>
       </ul>
     </nav>
   </header>
